--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
+# Collections
 collections:
   authors:
     output: true
 
+# Front matter defaults
 defaults:
   - scope:
       path: ""
@@ -17,3 +19,8 @@ defaults:
       path: ""
     values:
       layout: "default"
+
+# GitHub pages configuration
+domain: danielthefletch.github.io
+url: https://danielthefletch.github.io
+baseurl: /jekyll-test/
