--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,4 @@ defaults:
 # GitHub pages configuration
 domain: danielthefletch.github.io
 url: https://danielthefletch.github.io
-baseurl: /jekyll-test/
+baseurl: /jekyll-test/_site/
